test(kotlin): use Set.of in the cliOption guard
Set.of is already used across the test tree, including the kotlin package,
and the target is Java 11. Drops the Arrays and HashSet imports.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>